--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -107,6 +107,14 @@
   url = {https://CRAN.R-project.org/package=optimizeR}
 }
 
+@Manual{Oelschläger:2023b,
+  title = {fHMM: Fitting Hidden Markov Models to Financial Data},
+  author = {Lennart Oelschläger and Timo Adam and Rouven Michels},
+  year = {2023},
+  note = {R package version 1.1.0},
+  url = {https://loelschlaeger.de/fHMM/}
+}
+
 @article{Paap:2000,
 	author = {Richard Paap and Philip Hans Franses},
 	journal = {Journal of Applied Econometrics},
